--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ Version:        0.1.0
     --wp--style--global--wide-size: 76rem;
 }
 
-body.better-order-project {
+body.bop {
     font-family: var(--wp--preset--font-family--dm-sans);
 }
 
@@ -22,8 +22,8 @@ body.better-order-project {
     font-weight: 700;
 }
 
-.better-order-project,
-.better-order-project.front-page {
+.bop,
+.bop.front-page {
     .site-main {
         max-width: var( --wp--style--global--wide-size );
         padding-top: var( --wp--preset--spacing--7 );
@@ -115,7 +115,7 @@ div.is-style-summary {
     border-top: 6px solid var(--wp--preset--color--secondary);
 }
 
-.better-order-project.single-page {
+.bop.single-page {
     .section-navigation .current_page_ancestor[class*="page-category"] {
         background-color: var(--wp--preset--color--tertiary);
         color: var(--wp--preset--color--white);
@@ -131,10 +131,6 @@ div.is-style-summary {
         color: var( --wp--preset--color--gray-darkest );
     }
 
-    .guest-author-list {
-        margin-top: 0;
-    }
-
     :where(:not(.section-about)) .section__people {
         border-top: none;
     }
@@ -148,13 +144,13 @@ div.is-style-summary {
         padding-top: 0;
     }
 
-    .wp-block-post-template,
-    .guest-author-list, 
-    .speaker-list, 
-    .wp-block-co-authors-plus-coauthors:not(.authors-inline), 
-    .wp-block-quincy-people-list {
-        grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+    /* .wp-block-quincy-people-list {
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     }
+
+    .wp-block-quincy-people-list[data-found='1'] {
+        grid-template-columns: minmax(18rem, .6fr);
+    } */
 
 }
 
@@ -166,6 +162,13 @@ div.is-style-summary {
 
 .guest-author-list .type-user {
     border-bottom: none
+}
+
+.bop .guest-author-list .type-user .author-type {
+    display: block;
+    overflow: initial;
+    -webkit-box-orient: unset;
+    -webkit-line-clamp: unset;
 }
 
 .teaser.guest-author,
@@ -197,6 +200,12 @@ div.is-style-summary {
 @media screen and ((min-width: 468px) and (max-width:767px)) {
     .wp-block-group:where( :has(.wp-block-query)) {
         margin-top: 4rem;
+    }
+
+    .bop.page {
+        .wp-block-quincy-people-list {
+            margin-top: var(--wp--preset--spacing--6);
+        }
     }
 }
 
@@ -266,6 +275,17 @@ div.is-style-summary {
     .single-research .main-navigation__content > .menu-item-object-research {
         border-bottom: 6px solid var(--wp--preset--color--secondary);
     }
+
+    /**
+     * Participant List
+     */
+    .wp-block-quincy-people-list {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .wp-block-quincy-people-list[data-found='1'] {
+        grid-template-columns: minmax(18rem, .6fr);
+    }
 }
 
 @media screen and (min-width:1024px) {
@@ -282,7 +302,7 @@ div.is-style-summary {
 }
 
 @media screen and (min-width: 1200px) {
-    .guest-author-list {
+    .bop .wp-block-quincy-people-list {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
