--- a/style.css
+++ b/style.css
@@ -31,13 +31,39 @@ body.bop {
     }
 }
 
-p.is-style-intro {
-    font-family: var(--wp--preset--font-family--dm-sans);
-    font-size: var(--wp--preset--font-size--md);
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.3;
+.bop {
+    .wp-block-button__link {
+        font-weight: 400;
+    }
+
+    .is-style-intro {
+        font-family: var(--wp--preset--font-family--dm-sans);
+        font-size: var(--wp--preset--font-size--md);
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.3;
+    }
+
+    .is-style-section-heading {
+        letter-spacing: 1.08px;
+        font-size: var(--wp--preset--font-size--3-xl);
+    }
+
+    .is-style-section-heading + p {
+        margin-top: var( --wp--preset--spacing--4 );
+    }
+
+    .section {
+        padding-bottom: var(--wp--preset--spacing--2);
+        padding-top: var(--wp--preset--spacing--2);
+
+        header + .wp-block-post-template {
+            margin-top: var(--wp--preset--spacing--5);
+        }
+    }
 }
+
+.section {}
 
 sup.fn > a {
     font-weight: 700;
@@ -96,11 +122,6 @@ div.is-style-summary {
     .is-style-intro:not(:first-child) {
         margin-top: var(--wp--preset--spacing--2);
     }
-}
-
-.section-home.front-page .section {
-    padding-bottom: var(--wp--preset--spacing--2);
-    padding-top: var(--wp--preset--spacing--2);
 }
 
 /* @media (min-width: 768px) {
@@ -233,6 +254,12 @@ div.is-style-summary {
     .main-navigation__content {
         flex-wrap: nowrap;
         column-gap: var( --wp--preset--spacing--3 );
+    }
+
+    .footer-navigation, 
+    .main-navigation, 
+    .section-navigation {
+        font-weight: 400;
     }
 
     .main-navigation .current-menu-ancestor a,
