--- a/style.css
+++ b/style.css
@@ -149,11 +149,44 @@ div.is-style-summary {
         color: var(--wp--preset--color--gray-darkest);
     }
 
+    .post-body {
+        ol {
+            list-style-type: decimal;
+    
+            ol,
+            ul {
+                margin-top: .5rem;
+                list-style-type: lower-alpha;
+            }
+        }
+    
+        ul ul {
+            margin-top: .5rem;
+            list-style-type: circle;
+        }
+    
+        .is-style-alpha {
+            list-style-type: lower-alpha;
+        }
+    
+        li + li {
+            margin-top: .5rem;
+        }
+    
+    }
+
+    .post-body > .wp-block-image img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
     :where(:not(.section-about)) .section__people {
         border-top: none;
     }
 
-    .section__people .is-style-section-heading {
+    .section__people .is-style-section-heading,
+    .section__people .section__header .wp-block-heading {
         font-family: var(--wp--preset--font-family--dm-sans);
         font-size: var(--wp--preset--font-size--xl);
     }
