--- a/style.css
+++ b/style.css
@@ -101,11 +101,18 @@ h6.wp-block-heading.is-style-section-heading {
     .post-body {
         ol {
             list-style-type: decimal;
-    
+
             ol,
             ul {
                 margin-top: .5rem;
+            }
+    
+            ol {
                 list-style-type: lower-alpha;
+            }
+
+            ul {
+                list-style-type: disc;
             }
         }
     
@@ -467,14 +474,6 @@ div.is-style-summary {
 }
 
 @media screen and (min-width: 1200px) {
-    /* .bop .wp-block-quincy-people-list {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    } */
-
-    .bop .wp-block-quincy-people-list[data-found='1'] {
-        /* grid-template-columns: minmax(62%, 1fr); */
-        /* grid-template-columns: minmax(300px, 62%); */
-    }
 }
 
 /**
