--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1.wp-block-heading,
 }
 
 h1.wp-block-heading::after,
+.single-title::after,
 .wp-block-heading.is-style-section-heading::after,
 .section__header .wp-block-heading::after {
     border-bottom-width: 7px;
